--- a/ReservationSystem/appsettings.json
+++ b/ReservationSystem/appsettings.json
@@ -7,8 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiKey": "TATATAAON",
+  "ApiKey": "abc123",
   "ConnectionStrings": {
-    "ReservationDB": "Server=localhost;Database=ReservationDB;Trusted_Connection=True;"
+    "ReservationDB": "Server=localhost\\SQLEXPRESS;Database=ReservationDB;Trusted_Connection=True;"
   }
 }
